--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ CVS
 !/wp-content/plugins
 /wp-content/plugins/*
 !/wp-content/plugins/wp-maintenance-mode
+!/wp-content/plugins/wp-maintenance-mode/*
