acf-svg-data plugin

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,5 @@ CVS
 !/wp-content/plugins
 /wp-content/plugins/*
 !/wp-content/plugins/wp-maintenance-mode
-!/wp-content/plugins/wp-maintenance-mode/*
+!/wp-content/plugins/acf-svg-data
+
